# AVR_vscode

./: CMakeLists.txt  CMakePresets.json  toolchain-avr.cmake
Inc/: main.h
Lib/: CMakeLists.txt
Src/: main.c
